# CMCoreType

./: .gitmodules  CMakeLists.txt  EXAMPLES.md  README.md  path_config.cmake
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/src/: Makefile  cmake_install.cmake
docs/: DELIVERY_SUMMARY.md  FILE_MANIFEST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  README.md  REFACTORING_COMPLETE.md
examples/: ArrayItemProcessTest.cpp  ArrayRearrangeHelperTest.cpp  CMakeLists.txt  ObjectUtilTest.cpp  TypeCastTest.cpp  WyHashTest.cpp
examples/StrNumber/: CMakeLists.txt  StrNumberComprehensiveTest.cpp  StrNumberQuickTest.cpp  Uint2HexStrTest.cpp  utos_test.cpp
examples/color/: CMakeLists.txt  ColorAdvancedTest.cpp  ColorConversionTest.cpp  ColorDitheringTest.cpp  ColorQuantizeTest.cpp
examples/typeinfo/: CMakeLists.txt  TypeSizeof.cpp
inc/: CMCoreTypeDummy.h
inc/ankerl/: stl.h  unordered_dense.h
inc/hgl/: CoreType.h  Macro.h
inc/hgl/color/: AlphaBlend.h  BlendColor.h  CMYKf.h  CMYKub.h  Color.h  Color3f.h  Color3ub.h  Color4f.h  Color4ub.h  ColorDithering.h  ColorFormat.h  ColorLerp.h  ColorPacking.h  ColorQuantize.h  Gamma.h  HSL.h  HSV.h  LinearColor3f.h  LinearColor4f.h  Lum.h  OKLab.h  XYZ.h  YCbCr.h  YCoCg.h  sRGBConvert.h
inc/hgl/math/: BinaryConstants.h  Clamp.h  ClampUtil.h  FloatControl.h  FloatPrecision.h  FloatValidation.h  MathConstants.h  PhysicsConstants.h
inc/hgl/platform/: Exit.h  FuncLoad.h  Platform.h
inc/hgl/platform/compiler/: GNU.h  Intel.h  LLVM.h  Microsoft.h
inc/hgl/platform/os/: CharType.h  vsprintf.h
inc/hgl/time/: TimeConst.h
inc/hgl/type/: AlignUtil.h  ArrayItemProcess.h  ArrayRearrangeHelper.h  ArrayWriter.h  BitOperations.h  CharType.h  CompareUtil.h  Constants.h  EnumUtil.h  MemoryAlloc.h  MemoryUtil.h  MipmapUtil.h  ObjectUtil.h  StdByteBuffer.h  Str.Comp.h  Str.Hex.h  Str.Number.h  Str.StringArray.h  StrChar.h  TypeLimits.h
inc/hgl/util/hash/: QuickHash.h  SecureHash.h
inc/wyhash/: wyhash.h  wyhash32.h
src/: CMCoreTypeDummy.cpp  CMakeLists.txt
src/Color/: BlendColor.cpp  CMYKf.cpp  CMYKub.cpp  Color.cpp  Color3f.cpp  Color3ub.cpp  Color4f.cpp  Color4ub.cpp  ColorDithering.cpp  HSL.cpp  LinearColor3f.cpp  LinearColor4f.cpp
