set(CMCORETYPE_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/..)
set(CMCORETYPE_ROOT_INCLUDE_PATH ${CMCORETYPE_ROOT_PATH}/inc)
set(CMCORETYPE_ROOT_SOURCE_PATH ${CMCORETYPE_ROOT_PATH}/src)

set(TYPECORE_HGL_PATH ${CMCORETYPE_ROOT_INCLUDE_PATH}/hgl)
set(TYPECORE_PLATFORM_PATH ${TYPECORE_HGL_PATH}/platform)
set(TYPECORE_PLATFORM_OS_PATH ${TYPECORE_PLATFORM_PATH}/os)
set(TYPECORE_PLATFORM_COMPILER_PATH ${TYPECORE_PLATFORM_PATH}/compiler)
set(TYPECORE_TYPE_PATH ${TYPECORE_HGL_PATH}/type)

set(TYPECORE_HGL_MAIN_HEADERS  ${TYPECORE_HGL_PATH}/CoreType.h
								${TYPECORE_HGL_PATH}/Macro.h)

set(TYPECORE_PLATFORM_MAIN_HEADERS ${TYPECORE_PLATFORM_PATH}/Platform.h
									${TYPECORE_PLATFORM_PATH}/Exit.h
									${TYPECORE_PLATFORM_PATH}/FuncLoad.h)

set(TYPECORE_PLATFORM_OS_HEADERS ${TYPECORE_PLATFORM_OS_PATH}/Android.h
								  ${TYPECORE_PLATFORM_OS_PATH}/Apple.h
								  ${TYPECORE_PLATFORM_OS_PATH}/BSD.h
								  ${TYPECORE_PLATFORM_OS_PATH}/CharType.h
								  ${TYPECORE_PLATFORM_OS_PATH}/Linux.h
								  ${TYPECORE_PLATFORM_OS_PATH}/MSWindows.h
								  ${TYPECORE_PLATFORM_OS_PATH}/PosixThread.h
								  ${TYPECORE_PLATFORM_OS_PATH}/vsprintf.h)

set(TYPECORE_PLATFORM_COMPILER_HEADERS ${TYPECORE_PLATFORM_COMPILER_PATH}/EventFunc.h
										${TYPECORE_PLATFORM_COMPILER_PATH}/GNU.h
										${TYPECORE_PLATFORM_COMPILER_PATH}/Intel.h
										${TYPECORE_PLATFORM_COMPILER_PATH}/LLVM.h
										${TYPECORE_PLATFORM_COMPILER_PATH}/Microsoft.h
										${TYPECORE_PLATFORM_COMPILER_PATH}/Property.h)

set(TYPECORE_TYPE_HEADERS ${TYPECORE_TYPE_PATH}/Constants.h
						  ${TYPECORE_TYPE_PATH}/TypeLimits.h)

set(TYPECORE_HEADERS ${TYPECORE_HGL_MAIN_HEADERS}
					 ${TYPECORE_PLATFORM_MAIN_HEADERS}
					 ${TYPECORE_PLATFORM_OS_HEADERS}
					 ${TYPECORE_PLATFORM_COMPILER_HEADERS}
					 ${TYPECORE_TYPE_HEADERS})

set(TYPECORE_SOURCE_FILES CMCoreTypeDummy.cpp)

source_group("Platform" FILES ${TYPECORE_PLATFORM_MAIN_HEADERS})
source_group("Platform\\OS" FILES ${TYPECORE_PLATFORM_OS_HEADERS})
source_group("Platform\\Compiler" FILES ${TYPECORE_PLATFORM_COMPILER_HEADERS})
source_group("Type" FILES ${TYPECORE_TYPE_HEADERS})
source_group("Source" FILES ${TYPECORE_SOURCE_FILES})

list(REMOVE_DUPLICATES TYPECORE_HEADERS)

add_library(CMCoreType STATIC ${TYPECORE_HEADERS} ${TYPECORE_SOURCE_FILES})

if(WIN32 AND DEFINED HGL_MATH_LIB)
	target_link_libraries(CMCoreType PRIVATE ${HGL_MATH_LIB})
endif()

# Export include directory
set_target_properties(CMCoreType PROPERTIES PUBLIC_HEADER "${TYPECORE_HEADERS}")
target_include_directories(CMCoreType PUBLIC ${CMCORETYPE_ROOT_INCLUDE_PATH})

set_property(TARGET CMCoreType PROPERTY FOLDER "CM")
